--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lvlup</groupId>
-    <artifactId>LvlUp</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>lvlUp</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <properties>
